--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -65,7 +65,7 @@
   "author": "Автор",
   "from": "Дата с",
   "to": "Дата по",
-  "region": "Регион",
+  "region": "Регионы",
   "no_photo": "Нет фото",
   "pagination_text": "строк на странице",
   "sign_in": "Войти",
@@ -74,8 +74,10 @@
   "confirmation_parol": "Подтверждение пароля",
   "account_type_status": "Тип статуса аккаунта",
   "phone_number": "Номер телефона",
-  "username": "Имя пользователя",
+  "username": "Логин",
   "role": "Роль",
+  "detailNotification": "Детали уведомления",
+  "detailNews": "Подробности новости",
   "name_two": "Имя",
   "avatar": "Аватар",
   "type_form": "Тип формы",
@@ -116,6 +118,10 @@
   "Change": "Изменить",
   "My Courses": "Мои курсы",
   "Full Name": "Ф.И.О",
+  "addNews": "Добавить новость",
+  "Open hour": "Время открытия",
+  "Close hour": "Время закрытия",
+  "addNotification": "Добавить уведомление",
   "Phone": "Телефон",
   "Date of entry": "Дата поступления",
   "Status": "Статус",
@@ -130,7 +136,7 @@
   "Name": "Название",
   "no_image": "Нет изображения",
   "image": "Изображениe",
-  "title": "Заголовок",
+  "title": "name",
   "description": "Описание",
   "tariff": "Тариф",
   "Quantity": "Количество",
@@ -167,8 +173,8 @@
   "product detail": "Информация о продукте",
   "has discount": "Имеет скидку",
   "discount percentage": "Процент скидки",
-  "active product count": "Количество активных продуктов",
-  "inactive product count": "Количество неактивных продуктов",
+  "active product count": "Aктивных продуктов",
+  "inactive product count": "Неактивных продуктов",
   "Detail photo": "Детальное фото",
   "Background photo": "Фоновое фото",
   "enter_information": "Введите информацию",
@@ -262,7 +268,10 @@
   "category": "Категория",
   "sms_template": "СМС шаблон",
   "News template": "Шаблон новости",
+  "push_notification": "Всплывающее уведомление",
   "Locations": "Локации",
+  "social_media_exists": "Ссылка на социальную сеть этого типа уже существует.",
+  "phone_number_exists": "Номер телефона с таким номером уже существует",
   "Link": "Линк",
   "phones": "Телефоны",
   "dashboard": "Панель приборов",
@@ -321,6 +330,7 @@
   "PrivacyPolicy": "Политика конфиденциальности",
   "Terms_and_conditions": "Условия и положения",
   "staff_details": "Информация о персонале",
+  "productsCategory": "Категория продуктов",
   "add_staff": "Добавить персонал",
   "edit sms sending": "Редактировать смс рассылки",
   "add_sms_sending": "Добавить смс рассылку",
@@ -330,6 +340,9 @@
   "add banner": "Добавить баннер",
   "contacts": "Контакты",
   "The phone number must be entered in the format: '998 [XX] [XXX XX XX]": "Номер телефона необходимо вводить в формате: '998 [XX] [XXX XX XX]",
-  "phone_numbers": "Телефонные номера"
+  "phone_numbers": "Телефонные номера",
+  "Transactions": "Транзакции",
+  "Notification Detail": "Подробности уведомления",
+  "noDiscount": "Нет скидки"
   
 }
