--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -73,9 +73,13 @@
   "Cancel": "Bekor qilish",
   "Close": "Yopish",
   "Save": "Saqlash",
+  "Open hour": "Ochilish vaqti",
+  "Close hour": "Yopilish vaqti",
   "Change": "O'zgartirish",
   "My Courses": "Mening kurslarim",
-  "Full Name": "To'liq ism",
+  "Full Name": "To'liq ism ",
+  "addNews": "Yangilik qo'shish",
+  "addNotification": "Bildirishnoma qo'shish",
   "Phone": "Telefon raqami",
   "Date of entry": "Kirish sanasi",
   "Status": "Holati",
@@ -94,8 +98,8 @@
   "description": "Tavsif",
   "Detail photo": "Tafsilotli fotosurat",
   "Background photo": "Fon rasmi",
-  "active product count": "Faol mahsulotlar soni",
-  "inactive product count": "Faol bo'lmagan mahsulotlar soni",
+  "active product count": "Faol mahsulotlar ",
+  "inactive product count": "Faol bo'lmagan mahsulotlar ",
   "has discount": "Chegirma bor",
   "discount percentage": "Chegirma foizi",
   "product detail": "Mahsulot haqida ma'lumot",
@@ -207,11 +211,13 @@
   "UZ": "Uz",
   "RU": "Ru",
   "Published": "Chop etilgan",
+  "Transactions": "Bitimlar",
   "planned for(publish date)": "Rejalangan sana",
   "go_to_page": "Sahifaga o'ting",
   "forward": "Oldinga",
   "from": "Sanadan",
-  "sms sending": "SMS yuborish",
+  "sms sending": "SMS xabarnomalar",
+  "noDiscount": "Chegirma yo'q",
   "Banner": "Banner",
   "Receivers": "Qabul qiluvchilar",
   "phone_number": "Telefon raqam",
@@ -223,19 +229,22 @@
   "are_you_really_terminate_session": "Haqiqatan ham sessiyani tugatyapsizmi?",
   "delete": "O'chirish",
   "Notifications": "Bildirishnomalar",
-  "username": "Foydalanuvchi nomi",
+  "username": "Login",
   "last_visit": "Oxirgi tashrif",
   "category": "Kategoriya",
+  "Notification Detail": "Bildirishnoma tafsilotlari",
   "sms_template": "SMS shablon",
   "News template": "Yangiliklar shabloni",
   "Locations": "Joylar",
   "Edit": "Tahrirlash",
   "Link": "Havola",
   "phones": "Telefonlar",
-  "region": "ٌRegion",
+  "region": "Viloyatlar",
   "address": "Manzil",
   "dashboard": "Boshqaruv paneli",
   "product": "Mahsulot",
+  "detailNotification": "Xabarnoma tafsilotlari",
+  "detailNews": "Yangilik tafsilotlari",
   "View": "Ko'rinish",
   "All": "Hammasi",
   "Administration": "Ma'muriyat",
@@ -266,8 +275,12 @@
   "ram": "Tasodifiy kirish xotirasi",
   "disk": "Disk",
   "company": "Kompaniya",
+  "push_notification": "Push bildirishnomalar",
   "tech": "Texnologiyalar",
   "products": "Mahsulotlar",
+  "social_media_exists": "Ushbu turdagi ijtimoiy media havolasi allaqachon mavjud",
+  "productsCategory": "Mahsulotlar toifasi",
+  "phone_number_exists": "Bu raqamga ega telefon raqami allaqachon mavjud",
   "website": "Veb-sayt",
   "licence": "Litsenziya",
   "available": "Mavjud",
@@ -280,6 +293,7 @@
   "system_modules": "Tizim modullari",
   "district": "Tuman",
   "mac_address": "MAC-manzil",
+  "Receivers": "Qabul qiluvchilar",
   "Do you really want to unlink this card?": "Haqiqatdan ham ushbu kartani mijozdan uzib qo'ymoqchimisiz?",
   "Unlinking the card": "Kartani uzish",
   "created_successfully": "Muvaffaqiyatli yaratildi",
