--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -330,6 +330,7 @@
   "add banner": "Добавить баннер",
   "contacts": "Контакты",
   "The phone number must be entered in the format: '998 [XX] [XXX XX XX]": "Номер телефона необходимо вводить в формате: '998 [XX] [XXX XX XX]",
-  "phone_numbers": "Телефонные номера"
+  "phone_numbers": "Телефонные номера",
+  "added_time": "Дата добавление"
   
 }
