havas fixing full project

--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -106,6 +106,7 @@
   "Courses": "Курсы",
   "Rating": "Рейтинг",
   "Earned": "Заработано",
+  "Polls": "Опросы",
   "Role": "Роль",
   "Theme": "Тема",
   "Inactive": "Неактивный",
@@ -298,6 +299,9 @@
   "disk_usage": "Использование диска",
   "info_about_system": "Информация о системе",
   "processor": "Процессор",
+  "startDate": "Дата начала",
+  "endDate": "Дата окончания",
+  "Stories": "Storiyalar",
   "database": "База данных",
   "date_and_time": "Дата создания",
   "End date": "Дата окончания",
