--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -159,8 +159,11 @@
   "article": "Maqola",
   "project": "Loyiha",
   "soum": "So'm",
+  "Polls": "So'rovlar",
   "admission": "Qabul qilish",
   "pay": "To'lov",
+  "startDate": "Boshlanish sanasi",
+  "endDate": "Tugash sanasi",
   "move": "Ko'chirish",
   "confirmed": "Tasdiqlash",
   "not_confirmed": "Tasdiqlanmagan",
@@ -198,6 +201,7 @@
   "number_of_days_left": "Qolgan kunlar",
   "created_date": "Ro'yxatdan o'tgan sana",
   "NEW": "Yangi",
+  "Stories": "Истории",
   "WAITING": "Kutilmoqda",
   "CONFIRMED": "Tasdiqlandi",
   "REJECTED": "Rad etildi",
@@ -271,7 +275,6 @@
   "database": "Ma'lumotlar bazasi",
   "date_and_time": "Yaratilgan sana",
   "View order": "Buyurtmani ko'rish",
-
   "version_number": "Versiya raqami",
   "version_control": "Versiya nazorati",
   "Modified date": "O'zgartirilgan sana",
