--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -301,11 +301,12 @@
   "processor": "Процессор",
   "startDate": "Дата начала",
   "endDate": "Дата окончания",
-  "Stories": "Storiyalar",
+  "Stories": "Истории",
   "database": "База данных",
   "date_and_time": "Дата создания",
   "End date": "Дата окончания",
   "from_to": "Дата",
+  "storiesDetail": "Детали историй",
   "View order": "Посмотреть заказ",
   "version_number": "Номер версии",
   "version_control": "Контроль версий",
