--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -201,11 +201,12 @@
   "number_of_days_left": "Qolgan kunlar",
   "created_date": "Ro'yxatdan o'tgan sana",
   "NEW": "Yangi",
-  "Stories": "Истории",
+  "Stories": "Storiyalar",
   "WAITING": "Kutilmoqda",
   "CONFIRMED": "Tasdiqlandi",
   "REJECTED": "Rad etildi",
   "history": "Tarix",
+  "storiesDetail": "Storiyalar tafsilotlari",
   "hour": "s",
   "minute": "d",
   "start_date": "Boshlanish sanasi:",
