--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -53,6 +53,7 @@
     "audio": "Audio"
   },
   "Promotions": "Aksiyalar",
+  "PROMOTION": "Aksiyalar",
   "success": "Muvaffaqiyatli",
   "error": "Xatolik",
   "Search": "Qidirish",
@@ -160,6 +161,7 @@
   "project": "Loyiha",
   "soum": "So'm",
   "Polls": "So'rovlar",
+  "POLL": "So'rovlar",
   "admission": "Qabul qilish",
   "pay": "To'lov",
   "startDate": "Boshlanish sanasi",
@@ -207,6 +209,10 @@
   "REJECTED": "Rad etildi",
   "history": "Tarix",
   "storiesDetail": "Storiyalar tafsilotlari",
+  "Duration": "Davomiyligi",
+  "Add Button": "Tugma qo'shish",
+  "Button Type": "Tugma turi",
+  "RECIPES": "Retseptlar",
   "hour": "s",
   "minute": "d",
   "start_date": "Boshlanish sanasi:",
@@ -214,6 +220,7 @@
   "template": "Shablon:",
   "photo": "Rasm",
   "url": "URL",
+  "URL": "URL",
   "UZ": "O'z",
   "RU": "Ру",
   "KR": "Ўз",
@@ -243,6 +250,7 @@
   "sms_template": "SMS shablon",
   "News template": "Yangiliklar shabloni",
   "Locations": "Joylar",
+  "MAPS": "Joylar",
   "Edit": "Tahrirlash",
   "Link": "Havola",
   "phones": "Telefonlar",
@@ -286,6 +294,7 @@
   "push_notification": "Push bildirishnomalar",
   "tech": "Texnologiyalar",
   "products": "Mahsulotlar",
+  "PRODUCT": "Mahsulotlar",
   "social_media_exists": "Ushbu turdagi ijtimoiy media havolasi allaqachon mavjud",
   "productsCategory": "Mahsulotlar toifasi",
   "phone_number_exists": "Bu raqamga ega telefon raqami allaqachon mavjud",
