--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -57,6 +57,7 @@
     "audio": "Аудио"
   },
   "Promotions": "Акции",
+  "PROMOTION": "Акции",
   "deactivate": "Деактивировать",
   "are_you_really_going_to_delete_this_user": "Вы уверены?",
   "deleted_successfully": "Удален успешно",
@@ -107,6 +108,7 @@
   "Rating": "Рейтинг",
   "Earned": "Заработано",
   "Polls": "Опросы",
+  "POLL": "Опросы",
   "Role": "Роль",
   "Theme": "Тема",
   "Inactive": "Неактивный",
@@ -254,6 +256,7 @@
   "RU": "Ру",
   "KR": "Ўз",
   "url": "URL",
+  "URL": "URL",
   "Published": "Опубликовано",
   "planned for(publish date)": "Запланированная дата",
   "go_to_page": "Перейти на страницу",
@@ -261,6 +264,7 @@
   "sms sending": "СМС рассылка",
   "Banner": "Баннер",
   "Receivers": "Ресиверы",
+  "RECIPES": "Рецепты",
   "Set date and time": "Задать дату и время",
   "news": "Новости",
   "start time/ end time": "Время начала/время окончания",
@@ -273,6 +277,7 @@
   "News template": "Шаблон новости",
   "push_notification": "Всплывающее уведомление",
   "Locations": "Локации",
+  "MAPS": "Локации",
   "social_media_exists": "Ссылка на социальную сеть этого типа уже существует.",
   "phone_number_exists": "Номер телефона с таким номером уже существует",
   "Link": "Линк",
@@ -306,7 +311,10 @@
   "date_and_time": "Дата создания",
   "End date": "Дата окончания",
   "from_to": "Дата",
-  "storiesDetail": "Детали историй",
+  "storiesDetail": "Продолжительность",
+  "Add Button": "Добавить кнопку",
+  "Button Type": "Тип кнопки",
+  "Duration": "Davomiyligi",
   "View order": "Посмотреть заказ",
   "version_number": "Номер версии",
   "version_control": "Контроль версий",
@@ -316,6 +324,7 @@
   "company": "Компания",
   "tech": "Технологии",
   "products": "Продукты",
+  "PRODUCT": "Продукты",
   "website": "Веб-сайт",
   "licence": "Лицензия",
   "available": "Доступно",
