--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -278,6 +278,7 @@
   "push_notification": "Всплывающее уведомление",
   "Locations": "Локации",
   "MAPS": "Локации",
+  "Published": "Опубликовано",
   "social_media_exists": "Ссылка на социальную сеть этого типа уже существует.",
   "phone_number_exists": "Номер телефона с таким номером уже существует",
   "Link": "Линк",
