--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -136,6 +136,7 @@
   "No, cancel!": "Yo'q, bekor qilish!",
   "file_input": "Fayl kiritish",
   "no_data": "Ma'lumotlar yo'q",
+  "Published": "Chop etilgan",
   "choose_file": "Fayl tanlang",
   "enter_information": "Ma'lumot kiriting",
   "Wrong password!": "Parol notog'ri!",
