--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -136,7 +136,7 @@
   "Name": "Название",
   "no_image": "Нет изображения",
   "image": "Изображениe",
-  "title": "name",
+  "title": "Название",
   "description": "Описание",
   "tariff": "Тариф",
   "Quantity": "Количество",
@@ -342,6 +342,11 @@
   "contacts": "Контакты",
   "The phone number must be entered in the format: '998 [XX] [XXX XX XX]": "Номер телефона необходимо вводить в формате: '998 [XX] [XXX XX XX]",
   "phone_numbers": "Телефонные номера",
-  "added_time": "Дата добавление"
+  "added_time": "Дата добавление",
+  "Recipes": "Рецепты",
+  "preparation_time": "Время подготовки",
+  "calorie": "Калория",
+  "rating": "Рейтинг",
+  "select_category": "Выберите категорию"
   
 }
