--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -132,6 +132,7 @@
   "Date of entry": "Дата поступления",
   "Status": "Статус",
   "Login": "Логин",
+  "CountQuestion": "Вопросы",
   "Password": "Пароль",
   "help": "Помощь",
   "privacy_policy": "Политика",
@@ -243,8 +244,10 @@
   "device_model": "Модель оборудования",
   "number_of_days_left": "Количество оставшихся дней",
   "created_date": "Дата регистрации",
+  "Finished": "Завершенный",
   "NEW": "Новый",
   "WAITING": "Ожидание",
+  "Waiting": "В ожидании",
   "CONFIRMED": "Подтверждено",
   "REJECTED": "отклоненный",
   "history": "История",
