--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -97,6 +97,8 @@
   "name": "Nomi",
   "no_image": "Rasm yo'q",
   "image": "Rasm",
+  "Finished": "Tugallandi",
+  "Waiting": "Kutilmoqda",
   "title": "Sarlavha",
   "description": "Tavsif",
   "Detail photo": "Tafsilotli fotosurat",
@@ -122,6 +124,7 @@
   "period_type": "Muddat turi",
   "price": "Narxi",
   "Feedback": "Mulohaza",
+  "CountQuestion": "Savollar soni",
   "COURSE MANAGEMENT": "KURS BOSHQARUVI",
   "FINANCE": "MOLIYA",
   "Main": "Asosiy",
