--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -87,12 +87,16 @@
   "Date of entry": "Kirish sanasi",
   "Status": "Holati",
   "Login": "Login",
+  "Poll Details": "So‘rov tafsilotlari",
+  "Poll Questions Add": "So'rovnomaga savollar qo'shing",
+  "options": "Параметры",
   "Password": "Parol",
   "help": "Yordam",
   "privacy_policy": "Siyosat",
   "contact_us": "Biz bilan bog'lanish",
   "social_links": "Ijtimoiy tarmoqlar",
   "actions": "Amallar",
+  "Poll Questions Edit": "So‘rovnomani tahrirlash",
   "teachers": "O'qituvchilar",
   "name": "Nomi",
   "no_image": "Rasm yo'q",
