--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -50,6 +50,7 @@
     "question": "Савол",
     "audio": "Аудио"
   },
+  "multipleAnswers": "Бир нечта жавоблар",
   "are_you_really_going_to_delete_this_user": "Ишончингиз комилми?",
   "deleted_successfully": "Муваффақиятли ўчирилди",
   "Button Name": "Тугма номи",
@@ -89,7 +90,7 @@
   "Login": "Логин",
   "Poll Details": "Сўров тафсилотлари",
   "Poll Questions Add": "Сўровномага саволлар қўшинг",
-  "options": "Параметры",
+  "options": "Вариантлар",
   "Password": "Парол",
   "help": "Ёрдам",
   "privacy_policy": "Сиёсат",
@@ -132,6 +133,8 @@
   "COURSE MANAGEMENT": "КУРС БОШҚАРУВИ",
   "FINANCE": "МОЛИЯ",
   "Main": "Асосий",
+  "addPhoto": "Расм ва тугмани қўшинг",
+  "previewPhoto": "Расм ни кўриш",
   "Users": "Фойдаланувчилар",
   "upload": "Юклаш",
   "deadline": "Муддати",
