--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -50,6 +50,7 @@
     "question": "Savol",
     "audio": "Audio"
   },
+  "multipleAnswers": "Bir nechta javoblar",
   "are_you_really_going_to_delete_this_user": "Ishonchingiz komilmi?",
   "deleted_successfully": "Muvaffaqiyatli oʻchirildi",
   "Button Name": "Tugma nomi",
@@ -93,7 +94,7 @@
   "Password": "Parol",
   "help": "Yordam",
   "privacy_policy": "Siyosat",
-  "contact_us": "Biz bilan bog'lanish",
+  "contact_us": "Biz bilan boxfg'lanish",
   "social_links": "Ijtimoiy tarmoqlar",
   "actions": "Amallar",
   "Poll Questions Edit": "So‘rovnomani tahrirlash",
@@ -132,7 +133,9 @@
   "COURSE MANAGEMENT": "KURS BOSHQARUVI",
   "FINANCE": "MOLIYA",
   "Main": "Asosiy",
+  "addPhoto": "Rasm va tugmani qo'shing",
   "Users": "Foydalanuvchilar",
+  "previewPhoto": "Rasm ni ko'rish",
   "upload": "Yuklash",
   "deadline": "Muddati",
   "Name of tags": "Teg nomi",
@@ -228,7 +231,7 @@
   "start_date": "Boshlanish sanasi:",
   "end_date": "Tugash sanasi:",
   "template": "Shablon:",
-  "photo": "Rasm",
+  "photo": "Rasm ",
   "url": "URL",
   "URL": "URL",
   "UZ": "O'z",
