--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -136,6 +136,7 @@
   "addPhoto": "Расм ва тугмани қўшинг",
   "previewPhoto": "Расм ни кўриш",
   "Users": "Фойдаланувчилар",
+  "AddStory": "Сторй қўшиш",
   "upload": "Юклаш",
   "deadline": "Муддати",
   "Name of tags": "Тег номи",
@@ -223,6 +224,23 @@
   "history": "Тарих",
   "storiesDetail": "Сториялар тафсилотлари",
   "Duration": "Давомийлиги",
+  "EditStory": "Сторйни таҳрирлаш",
+  "ChangePoll": "Сўровномани ўзгартириш",
+  "ChangeCategoryProduct": "Маҳсулот тоифасини ўзгартириш",
+  "AddCategoryProduct": "Маҳсулот тоифасини қўшиш",
+  "AddProduct": "Маҳсулот қўшиш",
+  "ChangeProduct": "Маҳсулотни ўзгартириш",
+  "ChangeSmsTemplate": "Смс шаблонни ўзгартириш",
+  "AddLocation": "Жойлашувни қўшиш",
+  "ChangeLocation": "Жойлашувни ўзгартириш",
+  "AddVersion": "Версия қўшиш",
+  "AddPoll": "Сўровнома қўшиш",
+  "ChangeVersion": "Версияни ўзгартириш",
+  "AddContact": "Контакт қўшиш",
+  "ChangeSocial": "Ижтимоий тармоқларни таҳрирлаш",
+  "AddSocial": "Ижтимоий тармоқларни қўшиш",
+  "ChangePromotion": "Акцияни ўзгартириш",
+  "AddPromotion": "Реклама қўшиш",
   "Add Button": "Тугма қўшиш",
   "Button Type": "Тугма тури",
   "RECIPES": "Рецептлар",
