--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -257,6 +257,7 @@
   "options": "Variantlar",
   "minute": "м",
   "addPhoto": "Добавить фото и кнопку",
+  "AddStory": "Добавить историю",
   "previewPhoto": "Посмотреть картинку",
   "Poll Details": "Подробности опроса",
   "Poll Questions Add": "Вопросы для опроса добавить",
@@ -326,8 +327,28 @@
   "storiesDetail": "Продолжительность",
   "Add Button": "Добавить кнопку",
   "Button Type": "Тип кнопки",
-  "Duration": "Davomiyligi",
+  "Duration": "Продолжительность",
+  "EditStory": "Редактировать историю",
+  "AddPoll": "Добавить опрос",
+  "ChangeSmsTemplate": "Изменить шаблон смс",
+  "ChangePoll": "Изменить опрос",
+  "AddNewsTemplate": "Добавить шаблон новостей",
+  "EditNestTemplate": "Изменить шаблон новостей",
+  "AddLocation": "Добавить местоположение",
+  "ChangeLocation": "Изменить местоположение",
+  "AddVersion": "Добавить версию",
+  "ChangeVersion": "Изменить версию",
+  "AddCategoryProduct": "Добавить категорию продукта",
+  "ChangeCategoryProduct": "Изменить категорию продукта",
   "View order": "Посмотреть заказ",
+  "ChangeProduct": "Изменить продукт",
+  "AddPromotion": "Добавить акция",
+  "ChangePromotion": "Изменить акция",
+  "AddSmsTemplate": "Добавить шаблон смс",
+  "AddProduct": "Добавить продукт",
+  "AddContact": "Добавить контакт",
+  "AddSocial": "Добавьте социальные сети",
+  "ChangeSocial": "Редактировать социальные сети",
   "version_number": "Номер версии",
   "version_control": "Контроль версий",
   "Modified date": "Дата изменения",
