--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -136,6 +136,7 @@
   "addPhoto": "Rasm va tugmani qo'shing",
   "Users": "Foydalanuvchilar",
   "previewPhoto": "Rasm ni ko'rish",
+  "AddStory": "Story qo'shish",
   "upload": "Yuklash",
   "deadline": "Muddati",
   "Name of tags": "Teg nomi",
@@ -223,9 +224,27 @@
   "history": "Tarix",
   "storiesDetail": "Storiyalar tafsilotlari",
   "Duration": "Davomiyligi",
+  "EditStory": "Storyni tahrirlash",
+  "AddPoll": "So‘rovnoma qo‘shish",
+  "ChangePoll": "So'rovnomani o'zgartirish",
+  "AddCategoryProduct": "Mahsulot toifasini qo'shish",
+  "ChangeCategoryProduct": "Mahsulot toifasini o'zgartirish",
+  "AddProduct": "Mahsulot qo'shish",
+  "ChangeProduct": "Mahsulotni o'zgartirish",
+  "AddPromotion": "Reklama qo'shish",
+  "ChangeSmsTemplate": "Sms shablonni o'zgartirish",
+  "AddLocation": "Joylashuvni qo'shish",
+  "ChangeLocation": "Joylashuvni o'zgartirish",
+  "ChangePromotion": "Aksiyani o'zgartirish",
+  "AddSmsTemplate": "Sms shablonni qo'shish",
   "Add Button": "Tugma qo'shish",
   "Button Type": "Tugma turi",
   "RECIPES": "Retseptlar",
+  "AddVersion": "Versiya qo'shish",
+  "ChangeVersion": "Versiyani o'zgartirish",
+  "AddContact": "Kontakt qo'shish",
+  "AddSocial": "Ijtimoiy tarmoqlarni qo'shish",
+  "ChangeSocial": "Ijtimoiy tarmoqlarni tahrirlash",
   "hour": "s",
   "minute": "d",
   "start_date": "Boshlanish sanasi:",
