--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -256,11 +256,18 @@
   "RU": "Ру",
   "KR": "Ўз",
   "Transactions": "Битимлар",
+  "creating_a_backup": "Захира нусхасини яратиш",
+  "deletion_of_backup": "Захира нусхасини ўчириш",
+  "Draft": "Қоралама",
+  "are_you_sure_you_want_to_back_up_the_media_files": "Ҳақиқатан ҳам, медиа файлларнинг захира нусхасини яратмоқчимисиз",
   "planned for(publish date)": "Режаланган сана",
   "go_to_page": "Саҳифага ўтинг",
   "forward": "Олдинга",
   "from": "Санадан",
+  "codeCountSmall": "Рақамлар 13 тадан кам бўлиши мумкин эмас",
+  "codeCountBigger": "Рақамлар 13 тадан коп бўлиши мумкин эмас",
   "sms sending": "СМС хабарномалар",
+  "Onboarding": "Таништирув",
   "noDiscount": "Чегирма йўқ",
   "Banner": "Баннер",
   "phone_number": "Телефон рақам",
