--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -256,11 +256,18 @@
   "UZ": "O'z",
   "RU": "Ру",
   "KR": "Ўз",
+  "creating_a_backup": "Zaxira nusxasini yaratish",
   "Transactions": "Bitimlar",
+  "deletion_of_backup": "Zaxira nusxasini o'chirish",
+  "Draft": "Qoralama",
+  "are_you_sure_you_want_to_back_up_the_media_files": "Haqiqatan ham, media fayllarning zaxira nusxasini yaratmoqchimisiz",
   "planned for(publish date)": "Rejalangan sana",
   "go_to_page": "Sahifaga o'ting",
   "forward": "Oldinga",
+  "codeCountSmall": "Raqamlar 13 tadan kam bo'lishi mumkin emas",
+  "codeCountBigger": "Raqamlar 13 tadan kop bo'lishi mumkin emas",
   "from": "Sanadan",
+  "Onboarding": "Tanishtiruv",
   "sms sending": "SMS xabarnomalar",
   "noDiscount": "Chegirma yo'q",
   "Banner": "Banner",
