--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -268,6 +268,7 @@
   "codeCountBigger": "Рақамлар 13 тадан коп бўлиши мумкин эмас",
   "sms sending": "СМС хабарномалар",
   "Onboarding": "Таништирув",
+  "Discount percentage": "Чегирма фоизи",
   "noDiscount": "Чегирма йўқ",
   "Banner": "Баннер",
   "phone_number": "Телефон рақам",
