--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -268,6 +268,7 @@
   "codeCountBigger": "Raqamlar 13 tadan kop bo'lishi mumkin emas",
   "from": "Sanadan",
   "Onboarding": "Tanishtiruv",
+  "Discount percentage": "Chegirma foizi",
   "sms sending": "SMS xabarnomalar",
   "noDiscount": "Chegirma yo'q",
   "Banner": "Banner",
