--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -64,7 +64,7 @@
   "Poll Questions Edit": "Редактировать опрос",
   "Error from server!": "Ошибка с сервера!",
   "Button Name": "Название кнопки",
-  "Button Url": "URL-адрес кнопки",
+  "Button Url": "Aдрес кнопки",
   "Promotions": "Акции",
   "PROMOTION": "Акции",
   "deactivate": "Деактивировать",
@@ -122,6 +122,7 @@
   "Theme": "Тема",
   "Inactive": "Неактивный",
   "Active": "Активный",
+  "logout": "Выйти",
   "First Name": "Имя",
   "Surname": "Фамилия",
   "Phone Number": "Номер телефона",
