--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -50,6 +50,7 @@
     "question": "Савол",
     "audio": "Аудио"
   },
+  "nameButton": "Тугма номи",
   "logout": "Чиқиш",
   "multipleAnswers": "Бир нечта жавоблар",
   "are_you_really_going_to_delete_this_user": "Ишончингиз комилми?",
