--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -125,6 +125,7 @@
   "logout": "Выйти",
   "First Name": "Имя",
   "Surname": "Фамилия",
+  "nameButton": "Название кнопки",
   "Phone Number": "Номер телефона",
   "Cancel": "Отмена",
   "Close": "Закрыть",
