fixing errors and bugs

--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -50,6 +50,8 @@
     "question": "Савол",
     "audio": "Аудио"
   },
+  "sec": "секунд",
+  "format_photo": "Расмнинг формати ва ҳажми",
   "nameButton": "Тугма номи",
   "logout": "Чиқиш",
   "multipleAnswers": "Бир нечта жавоблар",
