--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -126,6 +126,8 @@
   "First Name": "Имя",
   "Surname": "Фамилия",
   "nameButton": "Название кнопки",
+  "format_photo": "Формат и размер контента",
+  "sec": "секунд",
   "Phone Number": "Номер телефона",
   "Cancel": "Отмена",
   "Close": "Закрыть",
