--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -52,6 +52,8 @@
   },
   "logout": "Chiqish",
   "nameButton": "Tugma nomi",
+  "sec": "сония",
+  "format_photo": "Rasmning formati va hajmi",
   "multipleAnswers": "Bir nechta javoblar",
   "are_you_really_going_to_delete_this_user": "Ishonchingiz komilmi?",
   "deleted_successfully": "Muvaffaqiyatli oʻchirildi",
@@ -398,5 +400,4 @@
   "General": "General",
   "Add quantity type": "Miqdor turini qo'shish",
   "Edit quantity type": "Miqdor turini tahrirlash"
-
 }
