--- a/src/plugins/i18n/locales/kr.json
+++ b/src/plugins/i18n/locales/kr.json
@@ -51,6 +51,10 @@
     "audio": "Аудио"
   },
   "sec": "секунд",
+  "gender": "Жинс",
+  "Male": "Эркак",
+  "Female": "Аёл",
+  "device_os_types": "Қурилма турлари",
   "format_photo": "Расмнинг формати ва ҳажми",
   "nameButton": "Тугма номи",
   "logout": "Чиқиш",
