--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -128,6 +128,10 @@
   "nameButton": "Название кнопки",
   "format_photo": "Формат и размер контента",
   "sec": "секунд",
+  "gender": "Пол",
+  "device_os_types": "Типы устройства",
+  "Male": "Мужской",
+  "Female": "Женский",
   "Phone Number": "Номер телефона",
   "Cancel": "Отмена",
   "Close": "Закрыть",
