--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -61,7 +61,11 @@
   "Button Url": "Tugma manzili",
   "Promotions": "Aksiyalar",
   "PROMOTION": "Aksiyalar",
+  "gender": "Jins",
+  "device_os_types": "Qurilma turlari",
   "success": "Muvaffaqiyatli",
+  "Male": "Erkak",
+  "Female": "Ayol",
   "error": "Xatolik",
   "Search": "Qidirish",
   "Add": "Qo'shish",
