making carousel to story module

--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -129,7 +129,7 @@
   "format_photo": "Формат и размер контента",
   "sec": "секунд",
   "gender": "Пол",
-  "device_os_types": "Типы устройства",
+  "device_os_types": "Типы ос устройства",
   "Male": "Мужской",
   "Female": "Женский",
   "Phone Number": "Номер телефона",
