--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -436,5 +436,7 @@
   "Preparation": "Приготовление",
   "General": "Общее",
   "Add quantity type": "Добавить тип количества",
-  "Edit quantity type": "Изменить тип количества"
+  "Edit quantity type": "Изменить тип количества",
+  "add_ingredient": "Добавить ингредиент",
+  "edit_ingredient": "Изменить ингредиент"
 }
