--- a/src/plugins/i18n/locales/uz.json
+++ b/src/plugins/i18n/locales/uz.json
@@ -405,5 +405,6 @@
   "Add quantity type": "Miqdor turini qo'shish",
   "Edit quantity type": "Miqdor turini tahrirlash",
   "add_ingredient": "Ingredient qo'shish",
-  "edit_ingredient": "Ingredientni tahrirlash"
+  "edit_ingredient": "Ingredientni tahrirlash",
+  "edit_recipe": "Retseptni tahrirlash"
 }
