--- a/src/plugins/i18n/locales/ru.json
+++ b/src/plugins/i18n/locales/ru.json
@@ -439,5 +439,7 @@
   "Edit quantity type": "Изменить тип количества",
   "add_ingredient": "Добавить ингредиент",
   "edit_ingredient": "Изменить ингредиент",
-  "edit_recipe": "Редактировать рецепт"
+  "edit_recipe": "Редактировать рецепт",
+  "add_cooking_step": "Добавление шага приготовления",
+  "edit_cooking_step": "Редактировать этап приготовления"
 }
